welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:25: error: reassignment to val
		comp = comp + 1 
                     ^